--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,8 +34,8 @@
         {
             "name": "ptex2pdf (ja)",
             "tools": [
-                "ptex2pdf (uplatex)",
-                "ptex2pdf (uplatex)"
+                "ptex2pdf",
+                "ptex2pdf"
             ]
         }
     ],
@@ -64,18 +64,10 @@
         },
     ],
     "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
-    "workbench.editorAssociations": {
-        "*.ipynb": "jupyter-notebook",
-        "*.py": "default"
-    },
     "editor.minimap.enabled": true,
     "editor.renderWhitespace": "all",
     "files.eol": "\r\n",
     "explorer.confirmDelete": false,
-    "notebook.cellToolbarLocation": {
-        "default": "right",
-        "jupyter-notebook": "left"
-    },
     "cSpell.customDictionaries": {
         "custom-dictionary-user": {
             "name": "custom-dictionary-user",
@@ -85,18 +77,7 @@
         }
     },
     "files.insertFinalNewline": true,
-    "python.linting.flake8Enabled": true,
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": true
-    },
-    "python.linting.mypyEnabled": true,
-    "grammarly.config.documentDomain": "academic",
-    "grammarly.config.suggestions.InformalPronounsAcademic": true,
-    "grammarly.patterns": [
-        "**/*.txt",
-        "**/*.tex",
-        "**/*.md"
-    ],
+    "grammarly.patterns": [],
     "terminal.integrated.profiles.windows": {
         "PowerShell": {
             "source": "PowerShell",
@@ -126,9 +107,6 @@
         "C:\\Users\\atsushi\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\"
     ],
     "diffEditor.renderSideBySide": false,
-    "python.linting.flake8Args": [
-        "--max-line-length=100"
-    ],
     "window.zoomLevel": -1,
     "files.trimTrailingWhitespace": true,
     "files.trimFinalNewlines": true,
